Add citation model and other things

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,7 @@
   <h2>Welcome to your project!</h2>
 
     <p>
-      <lift:helloWorld.howdy>
-        <span>Welcome to app at <b:time/></span>
-      </lift:helloWorld.howdy>
+      <lift:CitationScreen />
     </p>
 
 </lift:surround>
