--- a/src/main/webapp/templates-hidden/wizard-all.html
+++ b/src/main/webapp/templates-hidden/wizard-all.html
@@ -4,18 +4,18 @@
   <wizard:screen_top> <div> <wizard:bind/> </div> </wizard:screen_top>
   <wizard:errors> <div> <ul> <wizard:item> <li> <wizard:bind/> </li> </wizard:item> </ul> </div> </wizard:errors>
   <div> <wizard:fields>
-      <table>
+      <ul>
         <wizard:line>
-          <tr>
-            <td>
+          <li>
+            <p>
               <wizard:label><label wizard:for=""><wizard:bind/></label></wizard:label>
 	      <wizard:help><span><wizard:bind/></span></wizard:help>
 	      <wizard:field_errors> <ul> <wizard:error> <li> <wizard:bind/> </li> </wizard:error> </ul> </wizard:field_errors>
-          </td>
-          <td> <wizard:form/> </td>
-          </tr>
+          </p>
+          <p> <wizard:form/> </p>
+          </li>
         </wizard:line>
-      </table>
+      </ul>
     </wizard:fields> </div>
   <div> <table> <tr> <td> <wizard:prev/> </td> <td> <wizard:cancel/> </td> <td> <wizard:next/> </td> </tr> </table> </div>
   <wizard:screen_bottom> <div> <wizard:bind/> </div> </wizard:screen_bottom>
