--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <lift:surround with="default" at="content">
-  <h2>Welcome to your project!</h2>
+  <h2>Cite away</h2>
 
     <p>
       <lift:CitationScreen />
